pygobject (3.4.1-2) UNRELEASED; urgency=low

  [ Matthias Klose ]
  * Fix renaming of python3 extensions.

 -- Martin Pitt <mpitt@debian.org>  Mon, 22 Oct 2012 11:44:38 +0200

pygobject (3.4.1-1) experimental; urgency=low

  * New upstream bug fix release.
  * debian/rules: Update handling of site-packages directory, as this version
    now ships an .egg-info.

 -- Martin Pitt <mpitt@debian.org>  Tue, 16 Oct 2012 07:18:20 +0200

pygobject (3.4.0-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 24 Sep 2012 09:43:47 +0200

pygobject (3.3.92-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 17 Sep 2012 23:07:55 +0200

pygobject (3.3.91-1) experimental; urgency=low

  * New upstream release.
  * debian/control.in: Bump g-i build dependencies as per configure.ac.
  * debian/control.in: Bump X-Python-Version to >= 2.6. pygobject hasn't
    worked with 2.5 for quite a while.

 -- Martin Pitt <mpitt@debian.org>  Tue, 04 Sep 2012 12:47:21 +0200

pygobject (3.3.90-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Aug 2012 23:23:43 +0200

pygobject (3.3.4-1) experimental; urgency=low

  * New upstream release.
  * Add debian/tests/: autopkgtest for using GI modules with Python 2 and 3.
  * debian/control.in: Add XS-Testsuite header as per current DEP-8.
  * Add debian/tests/build: Build and run a program against pygobject, to
    verify that the headers and pkg-config file are installed correctly.
  * debian/watch: Look for unstable versions in experimental branch.

 -- Martin Pitt <mpitt@debian.org>  Sun, 22 Jul 2012 11:13:46 +0200

pygobject (3.3.3.1-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 25 Jun 2012 16:42:57 +0200

pygobject (3.3.2-1) experimental; urgency=low

  * New upstream release.
  * debian/control.in: Bump gobject-introspection build dep to >= 1.33.2 to