@@ -16,7 +16,8 @@ configure_flags += \
 		--prefix=/usr \
 		--enable-thread \
 		--build=$(DEB_BUILD_GNU_TYPE) \
-		--disable-maintainer-mode
+		--disable-maintainer-mode \
+		--disable-silent-rules
 
 ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 	configure_flags += --host=$(DEB_HOST_GNU_TYPE)
@@ -170,6 +171,8 @@ clean::
 	rm -rf build-* dbg-build-*
 	dh_autoreconf_clean
 	dh_clean *.pyc */*.pyc
+	find -name '*.pyc' | xargs -r rm -f
+	find -name __pycache__ | xargs -r rm -rf
 
 maybe_check = $(if $(findstring nocheck,$(DEB_BUILD_OPTIONS)),,check)
 
